@@ -3,7 +3,8 @@
 ## 2.3.4 - XX/XX/2019
 
 * **Updated Theme Blvd framework to 2.8.4**
-* Fixed: Pagination and ordering not working properly with post grid of page slugs.
+* Fixed: Pagination and ordering not working properly with post grid of specified page slugs.
+* Fixed: Sticky posts showing in post grid of specified page slugs.
 
 --------------------------------------------------------------
 
